# AI4GEM

./: .gitignore  Example_Maxwell.ipynb  README.md  fields_final.pt  pyproject.toml  readpaper.md
data/data_FDTD_2D_cavity/: test.py
scripts/: run_mat_fdt.py
src/: run_te_demo.py
src/gem/: __init__.py  gem_te.py  gem_te_3d.py  gem_te_gnn.py  grid.py
