[project]
name = "gem-n"
version = "0.1.0"
description = "GEM: Graph-driven EM solver — minimal TE 2D reproduction"
readme = "README.md"
authors = [{ name = "GEM-N" }]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "torch>=2.2",
  "torch-geometric>=2.5",
  "matplotlib>=3.7"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
